2011-07-25  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* configure.ac: Bump to pocc 1.0.

2011-07-24  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/scripts/checker_perfcorrect.sh: Update/Improve.
	* tests/scripts/conflist-passthru.txt: New. Mini configuration
	file for passthru testing.
	* tests/Makefile.am: Update accordingly, provide
	correctness-check-passthru rule.

2011-07-24  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/scripts/checker_perfcorrect.sh: Update.

2011-07-24  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/scripts/conflist-small.txt,
	* tests/scripts/conflist-large.txt: New. Store the flag to be tested.
	* tests/scripts/checker_perfcorrect.sh: Use the flag files instead
	of hardwired configurations.

2011-07-24  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/scripts/data_to_csv.sh,
	* tests/scripts/compute_regressions.sh,
	* tests/scripts/checker_perfcorrect.sh: New. Add a
	performance/correctness regression mechanism.

	* tests/Makefile.am: Update accordingly. Add new testing rules:
	correctness-check-small, correctness-check, performance-check-small,
	performance-check, performance-correctness-check-small,
	performance-correctness-check

2011-07-22  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c: Add an internal option for the number
	of machine registers (used for the punroller cost model).
	* driver/pocc/driver-pastops.c: Call the new loop unroller.

2011-07-21  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-pastops.c: Invoke the new loop bound hoister
	from PAST.

2011-07-21  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-pastops.c: Provide a post-ptile vectorizer,
	by separating out point loops and operate only on them, using fake
	parameters to make the loops affine.

2011-07-21  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/devel/configure.cfg,