@@ -1,5 +1,9 @@
 2011-07-25  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
+	* tests/scripts/checker_perfcorrect.sh: Minor update.
+
+2011-07-25  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
 	* configure.ac: Bump to pocc 1.0.
 
 2011-07-24  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
